<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".question.FillTheBlanksFragment">

    <include layout="@layout/header_layout"
        android:id="@+id/header"/>
    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:layout_below="@+id/header"
        android:minLines="2"
        android:textSize="@dimen/_12sdp" />

    <Spinner
        android:id="@+id/spin_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_question"
        android:layout_marginTop="@dimen/_10sdp" />

   <!-- <Button
        android:id="@+id/btn_true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_question"
        android:text="True"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_true"
        android:visibility="gone"
        android:text="False"
        />-->

    <TextView
        android:id="@+id/tv_no_data_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/there_is_no_data"
        android:textSize="@dimen/_12sdp"
        android:textColor="@android:color/black"
        android:visibility="gone"
        android:gravity="center"/>

    <Button
        android:id="@+id/nxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/next" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/pre"
        android:text="@string/previous"/>
    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/done"/>
    <Button
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:text="@string/result"/>

</RelativeLayout>