<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.PersonalInformationFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:hint="@string/name"
                    android:maxLength="50"
                    android:drawableLeft="@drawable/name_icon"
                    android:padding="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_name"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:hint="@string/email_id"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableLeft="@drawable/email_icon_small"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColorLink="@android:color/black" />

                <EditText
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_email"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:hint="@string/dob_type"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableLeft="@drawable/dob_icon"
                    android:editable="false"
                    android:focusable="false"
                    android:inputType="date"
                    android:maxLength="50"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <RadioGroup
                    android:id="@+id/radioGrp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    android:layout_below="@id/et_dob">
                    <RadioButton
                        android:id="@+id/radioM"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:checked="true"
                        android:layout_weight="1"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/male"
                        />
                    <RadioButton
                        android:id="@+id/radioF"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:checked="false"
                        android:layout_weight="1"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/female"
                        />
                </RadioGroup>
                <EditText
                    android:id="@+id/et_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioGrp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:drawableLeft="@drawable/mobile_number_icon"
                    android:maxLength="15"
                    android:drawablePadding="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <EditText
                    android:id="@+id/et_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_country"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:hint="@string/state"
                    android:maxLength="50"
                    android:padding="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableLeft="@drawable/state_icon"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_state"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:hint="@string/address"
                    android:drawableLeft="@drawable/address_icon"
                    android:drawablePadding="@dimen/_5sdp"
                    android:maxLength="100"
                    android:maxLines="2"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <EditText
                    android:id="@+id/et_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_mobile_no"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:hint="@string/country"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableLeft="@drawable/country_icon"
                    android:maxLength="50"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_address"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/login_btn"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/next"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </RelativeLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</RelativeLayout>